# TripleS

./: .gitignore  CMakeLists.txt  main.cpp
cpp/: .clang-format  CMakeLists.txt  main.cpp
cpp/interpreter/chunk/: chunk.h
cpp/interpreter/compiler/: compiler.h
cpp/interpreter/object/: object.c++  object.h
cpp/interpreter/scanner/: scanner.c++  scanner.h
cpp/interpreter/vm/: vm.c++  vm.h
cpp/src/: chunk.cpp  chunk.h  debug.cpp  debug.h  value.cpp  value.h  vm.cpp  vm.h
cpp/src/compiler/: compiler.cpp  compiler.h  scanner.cpp  scanner.h  token.h
definitions/: array.sss  export-tests.sss  function.sss  grammar.bnf  import.sss  map.sss  objects.sss  string-builtins.sss  test.sss  unary.sss
definitions/grammar/: grammar.bnf
interpreter/chunk/: chunk.c++  chunk.h
interpreter/compiler/: compiler.c++  compiler.h
interpreter/object/: object.c++  object.h
interpreter/object/objectString/: objectString.c++  objectString.h
interpreter/object/string/: string.h
interpreter/scanner/: scanner.c++  scanner.h
interpreter/value/: value.c++  value.h
interpreter/vm/: vm.c++  vm.h
nodejs/: jest.config.js  package-lock.json  package.json  tsconfig.json
nodejs/src/: cli.ts  index.ts  run-cli.ts  triples.ts
nodejs/src/ast/: expr.definition.ts  generate-ast.ts  stmt.definition.ts
nodejs/src/built-ins/: built-in.ts  index.ts
nodejs/src/environment/: environment.ts
nodejs/src/error-handler/: error.handler.ts  index.ts
nodejs/src/errors/: index.ts  parser-error.ts  runtime-error.ts
nodejs/src/expr/: array.expr.ts  assign.expr.ts  binary.expr.ts  call.expr.ts  expr.ts  get.expr.ts  getitem.expr.ts  (+11 more)
nodejs/test/: array.test.ts  boolean.test.ts  class.test.ts  error.test.ts  function.test.ts  import.test.ts  map.test.ts  number.test.ts  string.test.ts  var.test.ts
tools/array/: array.c++  array.h
tools/debug/: debug.c++  debug.h
tools/memory/: memory.c++  memory.h
(+40 files in other folders)
